python-programming/examples/lists/generator_expression.out
9024
120
<class 'list'>
<class 'generator'>
8
Traceback (most recent call last):
  File "examples/lists/generator_expression.py", line 18, in <module>
    print(gen[4])   # TypeError: 'generator' object has no attribute '__getitem__'
TypeError: 'generator' object is not subscriptable
